cmake_minimum_required(VERSION 3.20)

project(WebAssembly2)
set(CMAKE_CXX_STANDARD 17)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --bind")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -sALLOW_MEMORY_GROWTH=0")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --no-heap-copy")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -sTOTAL_MEMORY=1400MB")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -sMAX_WEBGL_VERSION=2")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -sMIN_WEBGL_VERSION=2")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -sUSE_WEBGL2=1")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -sFULL_ES2=1")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s MODULARIZE=1")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s EXPORT_NAME='createModule'")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s EXPORTED_RUNTIME_METHODS=['ccall','cwrap','UTF8ToString','stringToUTF16']")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --extern-post-js ../index.js")
set(CMAKE_INSTALL_PREFIX "/home/noahc42/eglbin" CACHE PATH "")

set(SRCS 
    src/main.cpp
    src/func.cpp)

set(HEADERS
    src/func.h)

add_executable(WEBGL_EGL_base ${SRCS} ${HEADERS} ${RESSOURCES})

install (TARGETS WEBGL_EGL_base DESTINATION ${CMAKE_INSTALL_PREFIX})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/WEBGL_EGL_base.wasm DESTINATION ${CMAKE_INSTALL_PREFIX})
install(FILES index.html DESTINATION ${CMAKE_INSTALL_PREFIX})
