cmake_minimum_required(VERSION 3.20)

project(WebAssembly2)
set(CMAKE_CXX_STANDARD 17)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --bind --no-heap-copy")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -sUSE_WEBGL2=1 -s ALLOW_MEMORY_GROWTH=0 -s TOTAL_MEMORY=1400MB")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -sMODULARIZE=1")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -sEXPORT_NAME='createModule'")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -sEXPORTED_RUNTIME_METHODS=['ccall','cwrap','UTF8ToString','stringToUTF16']")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --extern-post-js ../index.js")
set(CMAKE_INSTALL_PREFIX "" CACHE PATH "")

set(SRCS 
    src/main.cpp
    src/func.cpp)

set(HEADERS
    src/func.h)

add_executable(WEBGL_EGL_base ${SRCS} ${HEADERS} ${RESSOURCES})

add_executable(WEBGL_EGL_base ${SRCS} ${RESSOURCES})

install (TARGETS WEBGL_EGL_base DESTINATION ${CMAKE_INSTALL_PREFIX})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/WEBGL_EGL_base.wasm DESTINATION ${CMAKE_INSTALL_PREFIX})
install(FILES index.html DESTINATION ${CMAKE_INSTALL_PREFIX})
